Corrige alguns erros nos requsitos 4 e 5

--- a/style.css
+++ b/style.css
@@ -38,10 +38,9 @@
 }
 
 .pixel {
-  border: black solid 1px;
   width: 40px;
   height: 40px;
   display: inline-block;
   background-color: white;
-  border: 1px solid black 
-} 
+  border: 1px solid black;
+}
