retirando ID das div

--- a/style.css
+++ b/style.css
@@ -6,16 +6,16 @@
     box-sizing: border-box;
     display: inline-block;
 }
-#black {
+.black {
     background-color: black;
 }
-#red {
+.red {
    background-color: red;
 }
-#blue {
+.blue {
     background-color: blue;
 }
-#green {
+.green {
     background-color: green;    
 }
 .pixel {
