--- a/style.css
+++ b/style.css
@@ -45,11 +45,20 @@ body {
 }
 
 .pixel {
-  display: table-cell;
-  border: 1px solid black;
   width: 40px;
   height: 40px;
   background-color: white;
+  border: 1px solid black;
+  display: table-cell;
+}
+
+.buttom {
+  width: 70px;
+  height: 50px;
+  background-color: green;
+  color: white;
+  font-weight: 700;
+  margin: auto;
 }
 
 /*
