--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   border: 1px black solid;
   width: 80px;
   height: 40px;
-  display: inline-block;
+  display: inline-block
 }
 
 ul {
@@ -18,7 +18,7 @@ ul {
 }
 
 #pixel-board {
-  display: table-cell;
+  display: table;
   width: 220px;
   height: 120px;
 }
