--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 #color-palette {
-  width: 400px;
+  width: 470px;
   height: 101px;
   border: 1px solid #c3c3c3;
-  display: flex;
+  display: inline-block;
   flex-direction: row-reverse;
 }
 
@@ -12,28 +12,35 @@
   display: inline-block;
   border: 1px solid black;
 }
+
 .color {
   margin-inline: 5px 5px;
   border: 1px solid black;
 }
+
 #black {
   background-color: black;
 }
-#blue {
-  background-color: blue;
-}
+
 #red {
   background-color: red;
 }
+
+#blue {
+  background-color: blue;
+}
+
 #green {
   background-color: green;
 }
+
 #pixel-board {
   width: 400px;
   height: 400px;
   border: 1px solid #c3c3c3;
   display: flex;
 }
+
 .pixel {
   width: 100px;
   height: 99px;
