--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 .color{
   display: table-cell;
-  background-color: white;
+  /* background-color: white; */
   width: 40px;
   height: 40px;
   border: 1px solid black;
@@ -32,6 +32,10 @@
   width: 40px;
   height: 40px;
   border: 1px solid black;
+}
+
+#box1 {
+  background-color: green;
 }
 
 
