--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 body {
-  text-align:center;
   font-family: sans-serif;
+  text-align: center;
 }
 
 .color {
-  border: 1px solid black;
   width: 50px;
   height: 50px;
-  border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border: 1px solid black;
+  display: inline-block;
   margin: 1px;
   margin-bottom: 10px;
-  display: inline-block;
+  /* border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
 }
 
 #black {
@@ -30,12 +30,13 @@ body {
   background-color: blue;
 }
 
+/* Faça com que cada elemento do quadro de pixels possua 40 pixels de largura, 40 pixels de altura e seja delimitado por uma borda preta de 1 pixel. */
 .pixel {
-    border: 1px solid black;
-    border-top-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    background-color: white;
-    width: 40px;
-    height: 40px;
-    display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+  background-color: white;
+  display: inline-block;
+  /* border-top-left-radius: 10px;
+  border-bottom-right-radius: 10px; */
 }
