--- a/style.css
+++ b/style.css
@@ -20,3 +20,11 @@
 #color3 {
     background-color: teal;
 }
+
+.pixel {
+  display: inline-block;
+  border: solid black 1px;
+  width: 50px;
+  height: 50px;
+  background-color: white;
+}
