--- a/style.css
+++ b/style.css
@@ -32,13 +32,17 @@ h1 {
 #pixel-board {
   margin: auto;
   margin-top: 20px;
-  background-color: red;
  }
   
 .pixel {
+  margin: auto;
   border: 1px solid black;
   width: 40px;
   height: 40px;
   background-color: white;
 } 
+
+#tabela {
+    display: block;
+}
  
