--- a/style.css
+++ b/style.css
@@ -7,6 +7,19 @@
 .pixel {
   background-color:white;
 }
+
+/* #box0 {
+  background-color: black;
+}
+#box1 {
+  background-color: cyan;
+}
+#box2 {
+  background-color: red;
+}
+#box3 {
+  background-color:yellow;
+} */
 #pixel-board {
   width: 250px
 } 
