--- a/style.css
+++ b/style.css
@@ -19,3 +19,11 @@ body {
 	margin-left: 5px;
   background-color: white;
 }
+
+#clear-board {
+  height: 30px;
+  width: 80px;
+  margin-bottom: 10px;
+  font-size: 15px;
+  font-family: monospace;
+}
