--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 .palette-table {
-  display: table;
+  display: inline;
 }
 
 .palette-table div {
-  display: table-row;
+  display: inline;
 }
 
 .palette-table div div {
-  display: table-cell;
-  padding: 15px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
   border: solid 1px black;
 }
 
