soluçao dos exerciocios com ajuda do meu brother Marcos Mantovani

--- a/style.css
+++ b/style.css
@@ -35,3 +35,18 @@ width: auto;
   width:  40px;
 
 }
+
+.black{
+  background-color:black
+}
+
+.red{
+  background-color:red
+}
+
+.purple{
+  background-color:purple
+}
+.green{
+  background-color :green
+}
