--- a/style.css
+++ b/style.css
@@ -26,7 +26,9 @@ body {
 }
 
 #secondColor {
-  background-color: aqua;
+  background-color: black;
+  padding: 0px;
+  width: 0px;
 }
 
 #thirdColor {
@@ -38,7 +40,7 @@ body {
 }
 
 #fifthColor {
-  background-color: darkred;
+  background-color: cyan;
 }
 
 .tr {
