--- a/style.css
+++ b/style.css
@@ -1,11 +1,5 @@
-body {
-}
-
 #pixel-board {
   width: 210px;
-}
-
-#pixel-board {
   display: flex;
   flex-wrap: wrap;
 }
@@ -18,6 +12,7 @@ body {
 }
 
 .pixel {
+  background-color: white;
   border-spacing: 0;
   padding: 0;
 }
