--- a/style.css
+++ b/style.css
@@ -18,20 +18,20 @@ body {
   padding: 40px;
 }
 
-.color:nth-of-type(1) {
+.preto {
   background-color: black;
 }
 
 
-.color:nth-of-type(2) {
+.azul {
   background-color: blue;
 }
 
-.color:nth-of-type(3) {
+.amarelo {
   background-color: yellow;
 }
 
-.color:nth-of-type(4) {
+.verde {
   background-color: green;
 }
 
