--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
-* {
-  padding: 0;
-  margin: 0;
-}
+.pixel {
 
-#color-palette {}
+  border: solid black 1px;
+  display: inline-block;
+  height: 40px;
+  width: 40px;
+  background-color: white;
+
+}
 
 .color {
   border: solid black 1px;
