--- a/style.css
+++ b/style.css
@@ -23,10 +23,25 @@
     background-color: white;
 }
 
+#generate-board{
+    width: 40px;
+    height: 16px;
+    font-size: 6px;
+    vertical-align: bottom;
+    margin-left: 3px;
+}
+
+#board-size{
+    width: 70px;
+    height: 10px;
+}
+
 #clear-board{
     width: 40px;
     height: 14px;
     font-size: 6px;
     margin-bottom: 10px;
+    display: block;
+    margin-top: 8px;
 }
 
