--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 #color-palette {
   display: table;
   /* border-spacing: 1px; */
-  background-color: black;
+  /* background-color: black; */
   /* border: 1px solid black; */
 }
 
