--- a/style.css
+++ b/style.css
@@ -31,3 +31,20 @@
   height: 40px;
   background-color: white;
 }
+
+.black {
+  background-color: black;
+}
+
+.greenyellow {
+  background-color: greenyellow;
+}
+
+.blue {
+  background-color: blue;
+}
+
+.orangered {
+  background-color: orangered;
+}
+
