--- a/style.css
+++ b/style.css
@@ -10,8 +10,7 @@ body {
   display: inline-block;
   margin: 1px;
   margin-bottom: 10px;
-  /* border-top-left-radius: 10px;
-  border-bottom-right-radius: 10px; */
+  border-radius: 2px;
 }
 
 #black {
@@ -38,6 +37,5 @@ body {
   border: 1px solid black;
   background-color: white;
   display: inline-block;
-  /* border-top-left-radius: 10px;
-  border-bottom-right-radius: 10px; */
+  border-radius: 2px;
 }
