--- a/style.css
+++ b/style.css
@@ -1,20 +1,20 @@
 #color-palette {
-  width: 470px;
-  height: 101px;
-  border: 1px solid #c3c3c3;
+  width: 190px;
+  height: 40px;
+  border: 1px solid #ececc8;
   display: inline-block;
   flex-direction: row-reverse;
 }
 
 #color-palette div {
-  width: 100px;
-  height: 99px;
+  width: 40px;
+  height: 40px;
   display: inline-block;
   border: 1px solid black;
 }
 
 .color {
-  margin-inline: 5px 5px;
+  margin-inline: 1px 1px;
   border: 1px solid black;
 }
 
@@ -35,15 +35,16 @@
 }
 
 #pixel-board {
-  width: 400px;
-  height: 400px;
-  border: 1px solid #c3c3c3;
-  display: flex;
+  width: 210px;
+  height: 210px;
+  border: 1px solid;
+  display: block;
+  flex-direction: row-reverse;
 }
 
 .pixel {
-  width: 100px;
-  height: 99px;
+  width: 40px;
+  height: 40px;
   float: left;
   border: 1px solid black;
 }
