--- a/style.css
+++ b/style.css
@@ -2,34 +2,59 @@
   text-align: center;
 }
 
-#color-palette span:nth-child( 1 ) {
+#color-palette {
+  margin-left: 470px;
+}
+
+#color-palette :nth-child( 1 ) {
   background-color: black;
-  width: 150px;
-  height: 150px;
   color: black;
-  border: solid 1px black;
+  border: solid 5px black;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
 }
 
-#color-palette span:nth-child( 2 ) {
+#color-palette :nth-child( 2 ) {
   background-color: red;
-  width: 150px;
-  height: 100px;
   color: red;
-  border: solid 1px black;
+  border: solid 5px black;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
 }
 
-#color-palette span:nth-child( 3 ) {
+#color-palette :nth-child( 3 ) {
   background-color: blue;
-  width: 150px;
-  height: 100px;
   color: blue;
-  border: solid 1px black;
+  border: solid 5px black;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
 }
 
-#color-palette span:nth-child( 4 ) {
+#color-palette :nth-child( 4 ) {
   background-color: green;
-  width: 150px;
-  height: 100px;
   color: green;
-  border: solid 1px black;
+  border: solid 5px black;
+  display: inline-block;
+  height: 75px;
+  width: 75px;
+  
+}
+
+.pixel {
+  background-color: white;
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  border: 1px solid;
+}
+
+#pixel-board {
+  margin: 10px;
+}
+
+#table {
+  margin-left: 500px;
 }
