reset button corrections

--- a/style.css
+++ b/style.css
@@ -28,9 +28,10 @@
   padding: 0px;
 }
 
-#btn-reset {
-  width: 120px;
-  font-size: 0.65em;
+#clear-board {
+  width: 100px;
+  font-size: 0.75em;
   display: block;
-  color: #454545
+  color: #454545;
+  margin-top: 10px;
 }
