--- a/style.css
+++ b/style.css
@@ -25,6 +25,8 @@
   border: 1px solid black;
   width: 40px;
   height: 40px;
+  padding: 5px;
+  display:inline-block
 }
 
 .cor {
@@ -49,13 +51,9 @@
 
 #pixel-board {
   display: table;
-  border-collapse: collapse;
-}
-
-.align {
-  display: table-cell;
+  width: 300px;
 }
 
 .table {
   display: table-row;
-}
+} 
