--- a/style.css
+++ b/style.css
@@ -26,11 +26,12 @@
   width: 40px;
   height: 40px;
   padding: 5px;
-  display:inline-block
+  display:inline-block;
+  background-color: white;
 }
 
 .cor {
-  background-color: white;
+  
 }
 
 .preto {
