--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 #pixel-board {
-  margin: 20px 0px;
+  margin: 20px 0px 20px 0px;
   display: flex inline;
   border: 1px solid black;
 }
@@ -24,14 +24,18 @@
   border: 1px solid black;
   width: 40px;
   height: 40px;
-  margin: 0px;
-  padding: 0px;
+  margin: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
 }
 
-#clear-board {
+.btn {
   width: 100px;
   font-size: 0.75em;
-  display: block;
   color: #454545;
-  margin-top: 10px;
+  margin: 10px 10px 10px 10px;
+}
+
+#buttons-container {
+  display: flex;
+  padding: 5px 0px 5px 0px;
 }
