--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 #color-palette{
 display: flex;
 }
+
+.pixel {
+    width: 40px;
+    height: 40px;
+    border: black solid 1px;
+    background-color: white;}
 .color {
     margin: 5px;
     height: 50px;
@@ -8,16 +14,16 @@ display: flex;
     background-color:white;
     border: solid 1px black;
 }
-#vermelho {
+.vermelho {
     background-color: red;
 }
-#azul {
+.azul {
     background-color: blue;
 }
-#lilas {
+.lilas {
     background-color:violet;
 }
-#preto {
+.preto {
     background-color: black;
 }
 #pixel-board {
@@ -27,13 +33,4 @@ display: flex;
     width: 250px;
     margin-left: 20px;
 }
-.pixel {
-    width: 40px;
-    height: 40px;
-    border: black solid 1px;
-    background-color: white;
-}
-#linha1{
-    
 
-}
