--- a/style.css
+++ b/style.css
@@ -24,7 +24,6 @@ body {
 
 #pixel-board {
   margin: 0 auto;
-  padding-top: 50px;
   text-align: center;
   line-height: 0px;
 }
@@ -35,5 +34,14 @@ body {
   height: 40px;
   border: 1px solid black;
   background-color: white;
+  cursor: pointer;
+}
+
+.btn{
+  text-align: center;
+  padding: 20px;
+}
+
+#clear-board{
   cursor: pointer;
 }
