--- a/style.css
+++ b/style.css
@@ -1,24 +1,21 @@
-header h1{
-    text-align: center;
+#color-palette div{
+  display: inline-block;
+  border: 1px black solid;
+  padding: 30px;
 }
-#color-palette .color{
-    display: inline-block;
-    border-style: solid;
-    border-style: 1px;
-    color: black;
-    min-width: 100px;
-    min-height: 100px;
-
+/* Explica o que é o display table https://pt.stackoverflow.com/questions/401545/qual-o-uso-apropriado-do-display-table#: */
+#pixel-board {
+  display: table;
+  border: 1px black solid;
 }
-p:nth-of-type(1){
-    background-color: rgb(10, 10, 10);
+#pixel-board > div {
+  display: table-row;
+  padding: 20px;
 }
-p:nth-of-type(2){
-    background-color: rgb(224, 22, 56)
-}
-p:nth-of-type(3){
-    background-color: teal;
-}
-p:nth-of-type(4){
-    background-color: green;
+#pixel-board div .pixel {
+  display: table-cell;
+  background-color: brown;
+  border: 1px black solid;
+  height: 40px;
+  width: 40px;
 }
