--- a/style.css
+++ b/style.css
@@ -44,21 +44,26 @@ body {
   margin: auto;
 }
 
+.td {
+  display: table-cell;
+  margin: auto;
+}
+
 .pixel {
   width: 40px;
   height: 40px;
   background-color: white;
   border: 1px solid black;
-  display: table-cell;
 }
 
-.buttom {
-  width: 70px;
-  height: 50px;
+#clear-board {
+  width: 60px;
+  height: 30px;
   background-color: green;
   color: white;
   font-weight: 700;
   margin: auto;
+
 }
 
 /*
