--- a/style.css
+++ b/style.css
@@ -25,6 +25,10 @@
   background-color: yellow;
 }
 
+.white {
+  background-color: white;
+}
+
 #pixel-board {
   display: table;
   margin-top: 5px;
