--- a/style.css
+++ b/style.css
@@ -3,27 +3,52 @@
   margin: 0;
 }
 
+body {
+  width: auto;
+  background-image: url(images/art-pencil-color-school-education-isolated-1588939-pxhere.com.jpg);
+  background-position: 30% 45%;
+  background-size: cover;
+  font-family: monospace;
+}
+
+header {
+  margin-top: 50px;
+}
+
 h1 {
+  font-size: 70px;
+  font-weight: 900;
   padding-top: 25px;
   text-align: center;
+  color: white;
+}
+
+#div-palete {
+  text-align: center;
+  background-color: white;
+  width: auto;
+  margin-top: 500px;
+
 }
 
 #color-palette {
   text-align: center;
-  padding-top: 50px;
+  margin-top: 400px;
 }
 
 .color {
   width: 40px;
   height: 40px;
-  border: black solid 1px;
+  border: white solid 3px;
   display: inline-block;
   margin: 10px;
+  border-radius: 50%;
 }
 
 #pixel-board {
   text-align: center;
   padding-top: 30px;
+  padding-bottom: 30px;
 
 }
 
@@ -43,7 +68,7 @@ h1 {
 .selected {
   width: 40px;
   height: 40px;
-  border: black solid 1px;
+  border: white solid 3px;
   display: inline-block;
   margin: 10px;
 }
