--- a/style.css
+++ b/style.css
@@ -1,18 +1,26 @@
+body {
+  font-family: 'Pacifico', cursive;
+  background-image: url('/background-image.png');
+}
 #title {
+  font-size: 50px;
+  font-weight: 400;
   margin: 15px 0;
   text-align: center;
 }
 
 #color-palette {
   text-align: center;
+  margin: 25px 0;
 }
 
 #color-palette div {
   border: 1px solid black;
+  border-radius: 50%;
   display: inline-block;
-  height: 50px;
+  height: 70px;
   margin: 25px 10px;
-  width: 50px;
+  width: 70px;
 }
 
 .buttons-container {
@@ -21,7 +29,28 @@
 
 .paragraph {
   display: inline;
-  font-size: 14px;
+  font-size: 20px;
+}
+
+#board-size {
+  margin: 10px;
+  padding-top: 10px;
+}
+
+#generate-board {
+  background-color: black;
+  border-radius: 40%;
+  color: white;
+  font-size: 16px;
+  padding: 5px 10px;
+}
+
+#clear-board {
+  background-color: black;
+  border-radius: 40%;
+  color: white;
+  font-size: 20px;
+  padding: 5px 10px; 
 }
 
 #board-size {
