--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-  margin: 0px;
- text-align: center;
+  margin: 0;
+  text-align: center;
 }
+
 table {
- margin: auto;
+  margin: auto;
 }
+
 tr {
-  margin: 0px;
+  margin: 0;
 }
 
 .color {
@@ -18,12 +20,15 @@ tr {
 .black {
   background-color: black;
 }
+
 .red {
-  background-color: red;  
+ background-color: red;  
 }
+
 .blue {
   background-color: blue;
 }
+
 .green{
   background-color: green;
 }
@@ -33,6 +38,6 @@ tr {
   width: 40px;
   height: 40px;
   border: 1px solid black;
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
 }
