--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ body {
   border: 1px solid black;
   width: 40px;
   height: 40px;
-  display: inline-block;
+  display: table-cell;
   background-color: white;
 }
