--- a/style.css
+++ b/style.css
@@ -5,25 +5,8 @@
   display: inline-block;
 }
 
-#black {
-  background-color: black;
-}
-
-#red {
-  background-color: red;
-}
-
-#blue {
-  background-color: blue;
-}
-
-#green {
-  background-color: green;
-}
-
 #pixel-board {
-  display: grid;
-  grid-template-columns: repeat(5, 40px);
+    padding: 5px;
 }
 
 .pixel {
