Requisito 4.2 - Cria os 25 pixels e adiciona formataçao simples com o CSS.

--- a/style.css
+++ b/style.css
@@ -4,3 +4,14 @@
   height: 40px;
   width: 40px;
 }
+
+#pixel.board {
+  display: table;
+}
+
+.pixel {
+  border: 1px solid black;
+  display: table-cell;
+  height: 100px;
+  width: 100px;
+}
