--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
+* {
+  border-spacing: 0;
+}
 .color {
   border: 1px solid black;
+  border-radius: 10%;
   display: table-cell;
-  height: 40px;
-  width: 40px;
+  height: 50px;
+  width: 50px;
 }
 
 #pixel.board {
-  display: table;
+  display: table
 }
 
 .pixel {
-  border: 1px solid black;
   display: table-cell;
-  height: 100px;
-  width: 100px;
+  height: 40px;
+  width: 40px;
 }
