--- a/style.css
+++ b/style.css
@@ -22,10 +22,9 @@ body {
 }
 
 #pixel-board {
-  text-align: center;
   margin-top: 20px;
-  margin-left: auto;
   margin-right: auto;
+  margin-left: auto;
 }
 
 .pixel {
@@ -37,6 +36,13 @@ body {
 }
 
 #button-align {
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  margin-top: 20px;
+}
+
+#input-align {
   margin-right: auto;
   margin-left: auto;
   text-align: center;
