--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
   border-spacing: 0;
 }
+
 .color {
   border: 1px solid black;
   border-radius: 10%;
@@ -10,11 +11,12 @@
 }
 
 #pixel.board {
-  display: table
+  display: table;
 }
 
 .pixel {
   display: table-cell;
+  border: 1px solid black;
   height: 40px;
   width: 40px;
 }
