requisitos do 6 ao 8

--- a/style.css
+++ b/style.css
@@ -19,18 +19,18 @@ body {
   width: 40px;
 }
 
-.black {
+#black {
   background-color: black;
 }
 
-.red {
+#red {
   background-color: red;
 }
 
-.blue {
+#blue {
   background-color: blue;
 }
 
-.green {
+#green {
   background-color: green;
 }
