Desafios obrigatórios concluídos

--- a/style.css
+++ b/style.css
@@ -29,9 +29,8 @@ body {
   background-color: blue;
 }
 
-/* Faça com que cada elemento do quadro de pixels possua 40 pixels de largura, 40 pixels de altura e seja delimitado por uma borda preta de 1 pixel. */
 
-
+/* Requisito 5 */
 .pixel {
   width: 40px;
   height: 40px;
