--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
-button{
-    margin-top: 5px;
-    margin-bottom: 5px;
+*{
+    box-sizing: border-box;
 }
 
 .color{
     border: 1px solid black;
-    display: table-cell;
-}
-
-#color-palette{
-    width: 180px;
-    height: 47px;
+    width: 40px;
+    height: 40px;
 }
 
 #black{
@@ -30,7 +25,7 @@ button{
 }
 
 #pixel-board{
-
+border-collapse: collapse;
 }
 
 .pixel{
