Em index.html: adiciona button de id "clear-board" entre as sections de id "color-palette" e "pixel-board". Em style.css: estiliza a id "clear-board" com 15px de padding, 900 de font-weight, 10px de margem superior e inferior e centraliza o botão usando display flex e margens esquerda e direita automáticas. Em script.js: a function clearBoard obtem uma lista de elementos "pixel" e para cada um altera o backgroundColor para "white"; na function init, obtem o elemento de id "clear-board" e adiciona um escutador de evento click que dispara a function clearBoard para ele.

--- a/style.css
+++ b/style.css
@@ -73,3 +73,12 @@ body , main {
   background-color: white;
   display: inline-block;
 }
+
+#clear-board {
+  margin: 10px auto;
+  padding: 15px;
+  font-weight: 900;
+  display: flex;
+
+  /* justify-content: center; */
+}
