--- a/style.css
+++ b/style.css
@@ -21,39 +21,20 @@ section {
   text-align: center;
 }
 
-section #preto {
-  background-color: black;
+section .color{
+  list-style: none;
   width: 40px;
   height: 40px;
   border: solid 1px black;
   display: inline-block;
 }
 
-section #vermelho {
-  background-color: red;
+.color{
+  list-style: none;
   width: 40px;
   height: 40px;
   border: solid 1px black;
   display: inline-block;
-  margin-left: 5px;
-}
-
-section #azul {
-  background-color: blue;
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
-  display: inline-block;
-  margin-left: 5px;
-}
-
-section #verde {
-  background-color: green;
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
-  display: inline-block;
-  margin-left: 5px;
 }
 
 table {
