--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ header {
   color: rgb(112, 4, 4);
 }
 
-section {
+.paleta-container {
   background-color: aliceblue;
   padding: 2px;
   text-align: center;
