--- a/style.css
+++ b/style.css
@@ -1,40 +1,49 @@
 /* Estilização */
 .body {
   margin: 0;
+  padding: 0;
   text-align: center;
 }
 
 .table {
-  margin: auto;
+  border: 0;
+  border-spacing: 0;
+  border-collapse: collapse; 
 }
 
 #title {
-    color: black;
+  color: black;
 }
 
 #color-palette {   
-    height: 40px;
-    margin-bottom: 10px;
+  height: 40px;
+  margin-bottom: 10px;
 }
 
 .color {
-    border: solid black;
-    border-width: 1px; 
-    height: 40px;
-    width: 40px;    
+  border: solid black;
+  border-width: 1px; 
+  height: 40px;
+  width: 40px;    
 }
 
-#pixel-board {  
-  /* display: table-cell; */
+#pixel-board {
+  margin-top: 10px;
+  border-collapse: collapse;
+  margin-bottom: 10px;
+}
+
+#pixel-board td {  
+  padding: 0;
+  margin: 0;
 }
 
 .pixel {   
-    border: solid black;
-    background-color: white;
-    border-width: 1px; 
-    height: 40px;
-    width: 40px;  
-    /* display: table-cell;     */
+  border: solid black;
+  background-color: white;
+  border-width: 1px; 
+  height: 40px;
+  width: 40px;
 }
 
 #clear-board {
