--- a/style.css
+++ b/style.css
@@ -21,34 +21,63 @@ header {
   text-align: center;
 }
 
-section .color{
-  list-style: none;
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
-  display: inline-block;
+table {
+  padding: 3px;
+  background-color: rgb(51, 212, 11);
+  text-align: center;
+  margin-top: 30px;
 }
 
 .color{
   list-style: none;
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 10px;
   display: inline-block;
+  border: solid 1px rgb(168, 163, 163);
 }
 
-table {
-  padding: 2px;
-  background-color: rgb(51, 212, 11);
-  text-align: center;
-  margin-left: 41%;
-  margin-top: 30px;
+.pixel{
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    border: solid 1px rgb(76, 78, 78);
 }
 
-table td {
-  background-color: white;
-  width: 40px;
-  height: 40px;
-  border: solid 1px black;
-  text-align: center;
+#pixel-board{
+    margin-left: 43%;
 }
+
+.table-row{
+    height: 42px;
+}
+
+#clear-board{
+    margin-top: 20px;
+    text-align: center;
+    width: 80px;
+    border: solid 1px rgb(0, 0, 0);
+    border-radius: 10px;
+    background-color: rgb(230, 230, 230);
+    display: inline-block;
+    margin-left: 40%;
+}
+
+input{
+    display: inline-block;
+    width: 50px;
+    margin-left: 50px;
+    border-radius: 10px;
+    padding: 2px;
+}
+
+#generate-board{
+    margin-bottom: 10px;
+    text-align: center;
+    width: 50px;
+    border: solid 1px black;
+    background-color: rgb(230, 230, 230);
+    display: inline-block;
+    border-radius: 5px;
+} 
