--- a/style.css
+++ b/style.css
@@ -8,23 +8,23 @@
 .table {
   border: 0;
   border-spacing: 0;
-  border-collapse: collapse; 
+  border-collapse: collapse;
 }
 
 #title {
   color: black;
 }
 
-#color-palette {   
+#color-palette {
   height: 40px;
   margin-bottom: 10px;
 }
 
 .color {
   border: solid black;
-  border-width: 1px; 
+  border-width: 1px;
   height: 40px;
-  width: 40px;    
+  width: 40px;
 }
 
 #pixel-board {
@@ -33,20 +33,19 @@
   margin-bottom: 10px;
 }
 
-#pixel-board td {  
+#pixel-board td {
   padding: 0;
   margin: 0;
 }
 
-.pixel {   
+.pixel {
   border: solid black;
   background-color: white;
-  border-width: 1px; 
+  border-width: 1px;
   height: 40px;
   width: 40px;
 }
 
 #clear-board {
-  margin-right: auto;
-  margin-left: auto;
+  margin-top: 10px;
 }
