--- a/style.css
+++ b/style.css
@@ -1,25 +1,32 @@
-.color-palette {
-  display: flex;
+body {  
+  text-align: center;
 }
-.pixel-board {
+#color-palette {
   display: flex;
+  justify-content: center;
+  margin-bottom: 10px;
 }
-
+#pixel-board {
+  margin-top: 10px;
+  display: inline-block;
+  justify-content: center;
+}
 .color {
-  padding: 40px;
-  border: 1px solid black;
-  display: table-cell;
+  width: 40px;
+  height: 40px; 
   margin: 5px;
+  border: 1px solid black;
+  display: inline-block;
 }
 .pixel {
   width: 40px;
   height: 40px; 
   margin: 5px;
-  display: table-cell;
+  display: inline-block;
   border: 1px solid black;
   background-color: white;
 }
-.divH {
-  padding: 50px;
-  display: table;
+#clear-board {
+  text-align: center;
+  align-items: center;
 }
