--- a/style.css
+++ b/style.css
@@ -55,5 +55,11 @@
 }
 
 #table {
-  margin-left: 510px;
+  margin-left: 530px;
+}
+
+#clear-board {
+  margin-left: 620px;
+  padding: 10px;
+  margin-top: 10px;
 }
