--- a/style.css
+++ b/style.css
@@ -1,28 +1,27 @@
 body {
-  background-color: antiquewhite;
+  background-image: url(https://wallpaperaccess.com/full/2107255.jpg);
 }
 
 .colorPalette {
   margin: 5px;
-  text-align: center;
 }
 
 .pixelBoard {
-  text-align: center;
-  margin: 5px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
   display: table;
 }
 
 #title {
-  text-align: center;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 50px;
+  color: rgb(255, 255, 255);
 }
 
-#board {
-  margin-left: 40%;
-}
 
 .color {
-  border: black solid 1px;
+  border: black solid 2px;
   display: inline-block;
   padding: 30px;
 }
@@ -38,3 +37,29 @@ body {
   height: 40px;
   width: 40px;
 }
+
+#center {
+  border: 10px solid rgb(97, 113, 207);
+  border-style:groove;
+  width: 50%;
+  padding: 50px;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+#generate-board {
+  border-color: #46a7f5;
+  background:linear-gradient(to bottom, #86c6f8 5%, #46a7f5 100%);
+  box-shadow:inset 0px 1px 0px 0px #d7ecfd;
+  color:#fff;
+  text-shadow:0px 1px 0px #528009;  
+}
+
+#clear-board {
+  border-color:#46a7f5;
+  background:linear-gradient(to bottom, #86c6f8 5%, #46a7f5 100%);
+  box-shadow:inset 0px 1px 0px 0px #d7ecfd;
+  color:#fff;
+  text-shadow:0px 1px 0px #528009;  
+}
+ 
