--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+body{
+  text-align: center;
+
+  background-color: #17191a;
+  
+}
+h1{
+  color: aliceblue;
+}
+#pixel-board{
+  margin: 50px auto;
+
+  
+}
 .color {
   display: inline-block;
   border-style: solid;
@@ -17,11 +31,12 @@
   padding: 5px;
 }
 .pixel {
-  display: inline-block;
+  display: block;
   border-style: solid;
   border-width: 1px;
-
 }
+
+
 .line {
   margin:0;
   padding: 0;
@@ -35,4 +50,6 @@
   margin: 10px;
   border-style: solid;
   border-width: 1px;
+  color: aliceblue;
+  cursor:default;
 }
