--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
 }
 
 #title {
-  margin-bottom: 70px;
+  margin-bottom: 50px;
 }
 
 #color-palette {
-  margin-bottom: 70px;
+  margin-bottom: 25px;
 }
 
 .color {
@@ -27,4 +27,11 @@ body {
   height: 40px;
   display: inline-block;
   background-color: white;
+}
+
+#clear-board {
+ display: block;
+ margin-left: 47.5%;
+ margin-top: 25px;
+ margin-bottom: 30px;
 }
