--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+body{
+  height: 100%;
+  width: 100%;
+}
+.div1 {
+  width: 300px;
+  height: 100px;
+  border: 1px solid blue;
+}
 .color{
   display: inline-block;
-  /* margin: 10px; */
-  /* padding: 10px; */
   height: 40px;
   width: 40px;
   border: 1px solid black;
+}
+#linha{
+  background-color: grey;
 }
 #color1{
   background-color: black;
