--- a/style.css
+++ b/style.css
@@ -31,10 +31,13 @@
     width: 40px;
     height: 40px;
     border: black solid 1px;
-    background-color: white;
 }
 
 .clear-board{
     margin-left: 80px;
     margin-top: 20px;
+}
+
+.teste {
+  background-color: white;
 }
