--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
 
 ul{
     padding: 0;
+    margin: 5px;
     display: flex;
 }
 
 ul li{
     list-style: none;
+    cursor: pointer;
 }
 
 .color{
@@ -42,4 +44,5 @@ border-collapse: collapse;
     width: 40px;
     height: 40px;
     background-color: white;
+    cursor: pointer;
 }
