--- a/style.css
+++ b/style.css
@@ -23,9 +23,19 @@
   height: 40px;
   width: 40px;
   border: black solid 1px;
-  background-color: white;
+  background-color: yellow;
   display: table-cell;
 }
+
+.clear-board {
+  height: 40px;
+  width: 40px;
+  border: black solid 1px;
+  background-color:red;
+  display: table-cell;
+}
+
+
 
 /* 
 #pixel-board {
