arrumado lint css, js. concluido usuario definir tabela

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#color-palette div {
+#color-palette section {
   display: inline-block;
   border: 1px black solid;
   padding: 50px;
@@ -8,12 +8,13 @@
   display: table;
   padding: 10px;
 }
-#pixel-board > div { 
+
+#pixel-board > div {
   display: table-row;
   padding: 40px;
-  
 }
-#pixel-board > div > .pixel { 
+
+#pixel-board > div > .pixel {
   display: table-cell;
   background-color: white;
   border: 1px black solid;
