Commit 5 - Projeto Javascript - Pixels Art - Envio do item 9

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@
   height: 40px;
   width: 40px;
   border: black solid 1px;
-  background-color: yellow;
+  background-color: white;
   display: table-cell;
 }
 
