--- a/style.css
+++ b/style.css
@@ -23,6 +23,6 @@
   height: 40px;
   width: 40px;
   border: black solid 1px;
-  background-color:yellow;
+  background-color: white;
   display: table-cell;
 }
