--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   text-align: center;
   margin: 0;
   padding: 0;
+  background-color: rgb(26, 194, 194);
 }
 
 #title {
@@ -16,6 +17,8 @@ body {
   border: 1px solid black;
   display: inline-block; 
   padding: 40px;
+  margin-right: 25px;
+  border-radius: 20%;
 }
 
 #pixel-board {
@@ -27,6 +30,7 @@ body {
   height: 40px;
   display: inline-block;
   background-color: white;
+  
 }
 
 #clear-board {
