--- a/style.css
+++ b/style.css
@@ -2,6 +2,43 @@
   border-spacing: 0;
 }
 
+h1 {
+  font-size: 60px;
+}
+
+#color-palette {
+  margin-bottom: 15px;
+}
+
+#container {
+  margin: 12px;
+}
+
+#color-palette div {
+  margin: 4px;
+}
+
+button {
+  margin: 2px;
+  width: 80px;
+  text-align: center;
+}
+
+input {
+  width: 100px;
+  text-align: center;
+}
+
+table , tr , td {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .color {
   border: 1px solid black;
   border-radius: 10%;
@@ -10,20 +47,19 @@
   width: 50px;
 }
 
-table , tr , td {
-  border-collapse: collapse;
-  border-spacing: 0;
+.textCenter {
+  text-align: center;
 }
 
 .pixel {
   display: table-cell;
   table-layout: fixed;
-  overflow-x: auto;
   border: 1px solid black;
   height: 40px;
   width: 40px;
 }
 
-#lines {
-  width: 0;
+.justifyDivs {
+  display: flex;
+  justify-content: center;
 }
