--- a/style.css
+++ b/style.css
@@ -31,4 +31,20 @@
 }
 br{
     margin-right: 0px;
+    margin-top: 0px;
+}
+#estilizacao-principal{
+    margin-left: 35%;
+    margin-right: 35%;
+    margin-top:8%;
+    padding: 20px;
+    text-align: center;
+    background-color: blanchedalmond;
+
+}
+.nome{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+body{
+    background-color:#FAAB0C ;
 }
