--- a/style.css
+++ b/style.css
@@ -2,33 +2,39 @@
   margin: 0;
   padding: 0;
 }
+
 body{
   height: 100%;
   width: 100%;
 }
-.div1 {
-  width: 300px;
-  height: 100px;
-  border: 1px solid blue;
+
+h1{
+  margin-left: 10px;
 }
+
+#color-palette {
+  margin-left: 10px;
+}
+
 .color{
   display: inline-block;
   height: 40px;
   width: 40px;
   border: 1px solid black;
 }
-#linha{
-  background-color: grey;
-}
+
 #color1{
   background-color: black;
 }
+
 #color2{
   background-color: red;
 }
+
 #color3{
   background-color: blue;
 }
+
 #color4{
   background-color: green;
 }
