--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ br{
     margin-top: 0px;
 }
 #estilizacao-principal{
-    margin-left: 35%;
-    margin-right: 35%;
+    margin-left: auto;
+    margin-right: auto;
     margin-top:8%;
     padding: 20px;
     text-align: center;
