--- a/style.css
+++ b/style.css
@@ -45,11 +45,15 @@
   padding: 10px;
   width: 210px;
   margin: 0 auto;
+  display: block;
+  float: left;
+  position: absolute;
 }
 
 .pixel {
   border: solid black 1px;
   width: 40px;
   height: 40px;
-  display: inline-block;
+  display: block;
+  float: left;
 }
