--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@
   border: solid black 1px;
   width: 40px;
   height: 40px;
+  max-width: 50px;
+  max-height: 50px;
   display: block;
   float: left;
 }
