--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
   --color3: #fca311;
   --color4: #9e2a2b;
   --color5: #fff;
+
+  --sizePixel: 40px;
 }
 
 #color-palette {
@@ -42,20 +44,17 @@
 
 #pixel-board {
   border: black solid 1px;
-  padding: 10px;
-  width: 210px;
   margin: 0 auto;
   display: block;
   float: left;
   position: absolute;
+  width: 210px;
 }
 
 .pixel {
   border: solid black 1px;
-  width: 40px;
-  height: 40px;
-  max-width: 50px;
-  max-height: 50px;
+  width: var(--sizePixel);
+  height: var(--sizePixel);
   display: block;
   float: left;
 }
