Adiciona algumas alterações

--- a/style.css
+++ b/style.css
@@ -44,6 +44,10 @@
   border-width: 1px;
   height: 40px;
   width: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  min-width: 40px;
+  max-width: 40px;
 }
 
 #clear-board {
