--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 h1 {
   font-size: 40px;
-  font-family: Courier New;
+  font-family: Courier New, sans-serif;
   letter-spacing: 0.5px;
   margin-bottom: 20px;
 }
@@ -57,7 +57,7 @@ button {
   width: 100px;
   height: 30px;
   background-color: rgb(213, 213, 213);
-  font-family: Courier New;
+  font-family: Courier New, sans-serif;
   font-weight: 600;
   font-size: 16px;
   letter-spacing: 0.8px;
@@ -70,7 +70,7 @@ button:hover {
   transition: box-shadow 400ms;
 }
 
-button:focus{
+button:focus {
   outline: none;
 }
 
@@ -79,7 +79,7 @@ input {
   height: 30px;
   font-size: 16px;
   font-weight: 600;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: Courier New, Courier, monospace;
   padding-left: 5px;
 }
 
