--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   align-items: center;
   flex-wrap: wrap;
   border: 1px solid rgb(0, 0, 0);
+  margin-bottom: 50px;
 }
 
 .color {
@@ -37,5 +38,5 @@ table {
 }
 
 #clear-board {
-  margin-top: 30px;
+  margin-right: 35px;
 }
