--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ body {
   border: 1px solid rgb(0, 0, 0);
 }
 
+.color:first-child {
+  background-color: black;
+}
+
 #pixel-board {
   margin: 50px;
 }
