--- a/style.css
+++ b/style.css
@@ -1,51 +1,54 @@
-.color{
-    border: 1px solid black;
-    width: 50px;
-    height: 50px;
-    margin: 4px;
-    display: inline-block;
+.color {
+  border: 1px solid black;
+  width: 50px;
+  height: 50px;
+  margin: 4px;
+  display: inline-block;
 }
-.pixel{
-    border: 1px solid black;
-    width: 40px;
-    height: 40px;
-    box-sizing: border-box;
-    display: inline-block;
-    
+
+.pixel {
+  border: 1px solid black;
+  width: 40px;
+  height: 40px;
+  box-sizing: border-box;
+  display: inline-block;    
 }
-.div1{
-    background-color: black;
+
+.div1 {
+  background-color: black;
 }
-.div2{
-    background-color: blue;
+
+.div2 {
+  background-color: blue;
 }
-.div3{
-    background-color: brown;
+
+.div3 {
+  background-color: brown;
 }
-.div4{
-    background-color: cadetblue;
+
+.div4 {
+  background-color: cadetblue;
 }
-.color-palette{
-    display: flex;
+
+.color-palette {
+  display: flex;
   font-size: 20px;
 }
-br{
-    margin-right: 0px;
-    margin-top: 0px;
-}
-#estilizacao-principal{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top:8%;
-    padding: 20px;
-    text-align: center;
-    background-color: blanchedalmond;
-    border-radius: 30px;
 
+#estilizacao-principal {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 8%;
+  padding: 20px;
+  text-align: center;
+  background-color: blanchedalmond;
+  border-radius: 30px;
 }
-.nome{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+.nome {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
-body{
-    background-color:#FAAB0C ;
+
+body {
+    background-color: #faab0c;
 }
