--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   background-color: whitesmoke;
   margin: 1% 3%;
+  text-align: center;
 }
 
 h1 {
@@ -19,6 +20,8 @@ h1 {
 ul {
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
 li {
@@ -35,9 +38,9 @@ li:nth-child( 1 ) {
 }
 
 table {
-  margin-top: 20px;
   margin-left: 0.5%;
   display: table;
+  margin: 30px auto;
 }
 
 tr {
