--- a/style.css
+++ b/style.css
@@ -27,12 +27,14 @@
 
 .pixelLine {
   display: table-row;
+  height: 40px;
+  width: 40px;
 }
 
 .pixel {
+  background-color: white;
   border: 1px solid black;
   display: table-cell;
   height: 40px;
   width: 40px;
-  right: 40px;
 }
