--- a/style.css
+++ b/style.css
@@ -46,3 +46,16 @@ border-collapse: collapse;
     background-color: white;
     cursor: pointer;
 }
+
+#generate-board{
+
+}
+
+#board-size{
+    /* margin-left: 5px;
+    margin-right: 15px; */
+}
+
+#numOfBlocks{
+   
+}
