--- a/style.css
+++ b/style.css
@@ -1,33 +1,30 @@
-.color-pallete {
-  list-style: none;
-}
-#color-palette span:nth-child( 1 ) {
+#color-palette span:nth-child(1) {
   background-color: black;
   width: 150px;
   height: 150px;
-  border: solid 1px;
+  border: solid 1px black;
   color: black;
 }
-#color-palette span:nth-child( 2 ) {
+#color-palette span:nth-child(2) {
   background-color: red;
   width: 150px;
   height: 150px;
-  border: solid 1px;
+  border: solid 1px black;
   color: red;
 }
   
-#color-palette span:nth-child( 3 ) {
+#color-palette span:nth-child(3) {
   background-color: blue;
   width: 150px;
   height: 150px;
-  border: solid 1px;
+  border: solid 1px black;
   color: blue;
 }
   
-#color-palette span:nth-child( 4 ) {
+#color-palette span:nth-child(4) {
   background-color: green;
   width: 150px;
   height: 150px;
-  border: solid 1px;
+  border: solid 1px black;
   color: green;
 }
