--- a/style.css
+++ b/style.css
@@ -1,28 +1,25 @@
-body {
-    margin: 0;
-    padding: 0;
-	text-align: center;
-}
-
-section #color {
-    display: inline-block;
-
-}
-
-section #pixel-board {
+#art {
     display: table;
     border-spacing: 1px;
-    background-color: #000;
-    border: 3px solid #000;
+    background-color: black;
+    border: 1px solid black;
 }
 
-section .row {
-    display: table-row;
+#pixel-board {
+  display: table-row;
 }
 
-section .pixel {
-    display: table-cell;
-    background-color: #fff;
-    width: 40px;
-    height: 40px;
+.pixel {
+display: table-cell;
+background-color: white;
+width: 40px;
+height: 40px;
+border: 1px solid black;
+}
+
+.color {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
 }
