--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@
   height: 40px;
   background-color: rgb(255, 255, 255);
 }
+#clear-board{
+display:block;
+margin-top:20px;
+margin-left: 60px;
+ margin-bottom: 20px;
+}
