--- a/style.css
+++ b/style.css
@@ -1,49 +1,40 @@
-#color-pallete {
-  display: flex;
-}
-
 .color {
-  border: solid 1px black;
-  height: 150px;
-  width: 150px;
-  display: inline-block;
-}
-
-#one {
-background-color: black;
-}
-
-#two {
-background-color: red;
-}
-
-#three {
-background-color: green;
-}
-
-#four {
-background-color: yellow;
-}
-
-.pixel {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
     border: solid 1px black;
-    height: 40px;
+  }
+
+  #pixel-board {
+    display: table;
+  }
+
+  .pixel{ 
+    display: table-cell; 
     width: 40px;
-    display: inline-block;
+    height: 40px;
+    border: solid 1px black;
+  }
+
+  .line{ 
+    display: table-row;
+  }
+  
+  #choco {
+    background-color: chocolate;
+  }
+  
+  #white {
     background-color: white;
-}
+  }
+  #black {
+    background-color: black;
+  }
 
-.jellyRows {
-    display: inline-block;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-#button {
-  display: flexbox;
-}
-
-td , tr {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+  #violet {
+    background-color: violet;
+  }
+  
+  #blue {
+    background-color: cadetblue;
+  }
