--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+.body {
+  margin: 0;
+  padding: 0;
+}
+
 #color-palette {
-  display: flex; /* fonte: https://www.w3schools.com/css/css3_flexbox.asp */
-  flex-wrap: wrap; /* fonte: https://developer.mozilla.org/en-US/docs/Web/CSS/flex-wrap */
   width: 168px;
 }
 
@@ -13,15 +16,17 @@
 
 .pixel {
   border: 1px solid black;
+  background-color: white;
+  border-width: 1px;
   height: 40px;
   width: 40px;
-  display: inline-block;
-  background-color: white;
+  min-height: 40px;
+  max-height: 40px;
+  min-width: 40px;
+  max-width: 40px;
 }
 
 #pixel-board {
-  display: flex;
-  flex-wrap: wrap;
   width: 210px;
   height: 210px;
   margin-top: 10px;
