--- a/style.css
+++ b/style.css
@@ -1,43 +1,46 @@
-.body {
+* {
   margin: 0;
   padding: 0;
 }
 
+body {
+  display: flex;
+  align-items: left;
+  padding: 3%;
+}
+
+header {
+  padding: 10px;
+}
+
 #color-palette {
-  width: 168px;
+  display: flex;
+  width: fit-content;
 }
 
 .color {
-  border: 1px solid black;
-  height: 40px;
   width: 40px;
-  display: inline-block;
-}
-
-.pixel {
-  border: 1px solid black;
-  background-color: white;
-  border-width: 1px;
   height: 40px;
-  width: 40px;
-  min-height: 40px;
-  max-height: 40px;
-  min-width: 40px;
-  max-width: 40px;
+  border: 1px solid black;
 }
 
 #pixel-board {
-  width: 210px;
-  height: 210px;
-  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(5, 40px);
+  grid-template-rows: repeat(5, 40px);
+  width: fit-content;
+  height: fit-content;
+}
+
+.pixel {
+  width: 40px;
+  height: 40px;
+  background: white;
+  border: 1px solid black;
 }
 
 #clear-board {
-  display: inline-block;
-  margin-top: 10px;
-}
-
-#generate-board {
-  margin-top: 10px;
-  width: 70px;
+  margin: 10px;
+  padding: 4px 10px;
+  cursor: pointer;
 }
