--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1{
 
 #color-palette {
   margin-left: 10px;
+  margin-top: 10px;
 }
 
 .color{
@@ -37,4 +38,9 @@ h1{
 
 #color4{
   background-color: green;
+}
+
+.button{
+  margin-left: 10px;
+  margin-top: 10px;
 }
