--- a/style.css
+++ b/style.css
@@ -1,30 +1,9 @@
-#color-palette span:nth-child(1) {
-  background-color: black;
-  width: 150px;
-  height: 150px;
-  border: solid 1px black;
-  color: black;
+body {
+  display: inline-block;
 }
-#color-palette span:nth-child(2) {
-  background-color: red;
-  width: 150px;
-  height: 150px;
-  border: solid 1px black;
-  color: red;
-}
-  
-#color-palette span:nth-child(3) {
-  background-color: blue;
-  width: 150px;
-  height: 150px;
-  border: solid 1px black;
-  color: blue;
-}
-  
-#color-palette span:nth-child(4) {
-  background-color: green;
-  width: 150px;
-  height: 150px;
-  border: solid 1px black;
-  color: green;
+.color {
+  height: 75px;
+  width: 75px;
+  display: inline-block;
+  border: 1px solid black;
 }
