--- a/style.css
+++ b/style.css
@@ -44,3 +44,12 @@ h1{
   margin-left: 10px;
   margin-top: 10px;
 }
+
+.pixel {
+  margin-left: 10px;
+  margin-top: 10px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  border: 1px solid black;
+}
