Adiciona max width and heigt

--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ header {
   border: solid black;
   background-color: white;
   border-width: 1px;
-  height: 40px;
-  width: 40px;
+  max-height: 40px;
+  max-width: 40px;
 }
 
 #clear-board {
