--- a/style.css
+++ b/style.css
@@ -40,8 +40,12 @@ header {
   border: solid black;
   background-color: white;
   border-width: 1px;
+  width: 40px;
+  height: 40px;
   max-height: 40px;
   max-width: 40px;
+  min-width: 40px;
+  min-height: 40px;
 }
 
 #clear-board {
