--- a/style.css
+++ b/style.css
@@ -65,10 +65,11 @@ footer {
   background-color: darkred;
   padding: 20px;
   border: solid silver;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   margin: auto;
+  margin-top: 50px;
 }
 
 table {
